fix: change gallery style

--- a/src/templates/pages/albums.html
+++ b/src/templates/pages/albums.html
@@ -25,9 +25,31 @@
 
               <ul class="albums__list">
                 <li class="albums__item">
-                  <div class="albums__img-container">
-                    <img src="" alt="image" class="albums__img">
-                    <img src="https://picsum.photos/400/300?grayscale" alt="image" class="albums__img--second">
+                  <div class="embla albums__slides">
+                    <div class="embla__viewport albums__viewport">
+                      <div class="albums__img-container embla__container">
+                        <div class="albums__slide embla__slide">
+                          <div class="albums__slide-inner embla__slide__inner">
+                            <img src="./images/gallery/hist.jpg" alt="image" class="albums__img--nth embla__slide__img" />
+                          </div>
+                        </div>
+                        <div class="albums__slide embla__slide">
+                          <div class="albums__slide-inner embla__slide__inner">
+                            <img src="./images/gallery/hist.jpg" alt="image" class="albums__img albums__img--nth embla__slide__img" />
+                          </div>
+                        </div>
+                        <div class="albums__slide embla__slide">
+                          <div class="albums__slide-inner embla__slide__inner">
+                            <img src="./images/gallery/hist.jpg" alt="image" class="albums__img albums__img--nth embla__slide__img" />
+                          </div>
+                        </div>
+                        <div class="albums__slide embla__slide">
+                          <div class="albums__slide-inner embla__slide__inner">
+                            <img src="./images/gallery/hist.jpg" alt="image" class="albums__img albums__img--nth embla__slide__img" />
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                   </div>
 
                   <h3 class="albums__name">Наш выпуск</h3>
@@ -35,40 +57,64 @@
                 </li>
 
                 <li class="albums__item">
-                  <div class="albums__img-container">
-                    <img src="https://picsum.photos/400/300?grayscale" alt="image" class="albums__img">                  </div>
+                  <!-- <div class="albums__img-container"> -->
+                  <img src="https://picsum.photos/400/300?grayscale" alt="image" class="albums__img" />
+                  <!-- </div> -->
 
                   <h3 class="albums__name">Наш выпуск</h3>
                   <a href="" class="albums__link"></a>
                 </li>
 
                 <li class="albums__item">
-                  <div class="albums__img-container">
-                    <img src="https://picsum.photos/400/300?grayscale" alt="image" class="albums__img">
-                  </div>
+                  <!-- <div class="albums__img-container"> -->
+                  <img src="https://picsum.photos/400/300?grayscale" alt="image" class="albums__img" />
+                  <!-- </div> -->
 
                   <h3 class="albums__name">Наш выпуск</h3>
                   <a href="" class="albums__link"></a>
                 </li>
 
                 <li class="albums__item">
-                  <div class="albums__img-container">
-                    <img src="https://picsum.photos/400/300?grayscale" alt="image" class="albums__img">
-                  </div>
+                  <!-- <div class="albums__img-container"> -->
+                  <img src="https://picsum.photos/400/300?grayscale" alt="image" class="albums__img" />
+                  <!-- </div> -->
 
                   <h3 class="albums__name">Наш выпуск</h3>
                   <a href="" class="albums__link"></a>
                 </li>
 
                 <li class="albums__item">
-                  <div class="albums__img-container">
-                    <img src="https://picsum.photos/400/300?grayscale" alt="image" class="albums__img">
-                  </div>
+                  <img src="./images/gallery/hist.jpg" alt="image" class="albums__img albums__img--nth embla__slide__img" />
+                  <!-- <div class="embla albums__slides--y">
+                    <div class="embla__viewport albums__viewport--y">
+                      <div class="albums__img-container--y embla__container">
+                        <div class="albums__slide--y embla__sli--yde">
+                          <div class="albums__slide-inner--y embla__slide__inner">
+                            <img src="./images/gallery/hist.jpg" alt="image" class="albums__img--nth embla__slide__img" />
+                          </div>
+                        </div>
+                        <div class="albums__slide--y embla__slide">
+                          <div class="albums__slide-inner--y embla__slide__inner">
+                            <img src="./images/gallery/hist.jpg" alt="image" class="albums__img albums__img--nth embla__slide__img" />
+                          </div>
+                        </div>
+                        <div class="albums__slide--y embla__slide">
+                          <div class="albums__slide-inner--y embla__slide__inner">
+                            <img src="./images/gallery/hist.jpg" alt="image" class="albums__img albums__img--nth embla__slide__img" />
+                          </div>
+                        </div>
+                        <div class="albums__slide--y embla__slide">
+                          <div class="albums__slide-inner--y embla__slide__inner">
+                            <img src="./images/gallery/hist.jpg" alt="image" class="albums__img albums__img--nth embla__slide__img" />
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div> -->
 
-                  <h3 class="albums__name">Наш выпуск</h3>
+                  <h3 class="albums__name--overflow">Наш выпуск</h3>
                   <a href="" class="albums__link"></a>
                 </li>
-
               </ul>
             </div>
           </div>
