--- a/src/scss/pages/albums.scss
+++ b/src/scss/pages/albums.scss
@@ -25,6 +25,8 @@
   }
 
   &__item {
+    // flex: 0 0 100%;
+    overflow: hidden;
     margin: 10px 10px 10px 0;
 
     position: relative;
@@ -36,6 +38,11 @@
     max-width: 289px;
     background-image: $bg;
     transition: transform 0.4s, box-shadow 0.4s;
+
+    .embla__slide {
+      // max-width: 930px;
+    }
+
     @include mq("1024") {
       .albums__img {
         min-height: 240px;
@@ -84,22 +91,29 @@
     }
   }
 
-  &__img-container {
-    flex: 1 1 auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    // max-width: 100%;
-  }
-
   &__img {
     // max-width: 40%;
     // min-width: 39%;
     // max-height: 397px;
     // min-height: 397px;
     min-height: 300px;
+    max-height: 300px;
     min-width: 45%;
+
     object-fit: cover;
+
+    &--nth {
+      position: absolute;
+      display: block;
+      top: 50%;
+      left: 50%;
+      width: auto;
+      min-height: 100%;
+      min-width: 100%;
+      max-width: none;
+      transform: translate(-50%, -50%);
+    }
+
     @include mq("768") {
       margin: 0 auto;
       min-width: 100%;
@@ -109,12 +123,76 @@
     }
 
     &--second {
-      min-width: 50%;
+      min-width: 45%;
+      max-width: 45%;
       min-height: 300px;
+      max-height: 300px;
+
+      @include mq("1024") {
+        display: none;
+      }
     }
   }
 
   &__name {
+    margin: 14px 0 0 0;
     text-align: center;
+    @include txt(3);
+
+    &--overflow {
+      position: absolute;
+      left: 50%;
+      bottom: 10px;
+      transform: translateX(-50%);
+      color: #fff;
+      text-shadow: 3px 2px 5px $accent;
+    }
+  }
+
+  // embla
+  &__slides {
+    position: relative;
+    padding: 0;
+  }
+
+  // embla__viewport
+  &__viewport {
+    width: 100%;
+  }
+
+  // embla__container
+  &__img-container {
+    max-height: 300px;
+    margin-left: unset;
+    // max-width: 100%;
+
+    display: flex;
+    user-select: none;
+    -webkit-touch-callout: none;
+    -khtml-user-select: none;
+    -webkit-tap-highlight-color: transparent;
+    margin-left: -10px;
+  }
+
+  // embla__slide
+  &__slide {
+    position: relative;
+    min-width: 50%;
+
+    // embla__slide__inner
+    &-inner {
+      position: relative;
+      overflow: hidden;
+      margin-right: 30px;
+      // height: 280px;
+      min-height: 300px;
+      max-height: 300px;
+      min-width: 200px;
+      max-width: 740px;
+    }
+
+    &-inner > .albums__img {
+      margin-left: -20px;
+    }
   }
 }
