--- a/src/templates/pages/albums.html
+++ b/src/templates/pages/albums.html
@@ -85,26 +85,26 @@
 
                 <li class="albums__item">
                   <img src="./images/gallery/hist.jpg" alt="image" class="albums__img albums__img--nth embla__slide__img" />
-                  <!-- <div class="embla albums__slides--y">
-                    <div class="embla__viewport albums__viewport--y">
-                      <div class="albums__img-container--y embla__container">
-                        <div class="albums__slide--y embla__sli--yde">
-                          <div class="albums__slide-inner--y embla__slide__inner">
+                  <!-- <div class="embla albums__slides">
+                    <div class="embla__viewport albums__viewport">
+                      <div class="albums__img-container embla__container">
+                        <div class="albums__slide embla__slide">
+                          <div class="albums__slide-inner embla__slide__inner">
                             <img src="./images/gallery/hist.jpg" alt="image" class="albums__img--nth embla__slide__img" />
                           </div>
                         </div>
-                        <div class="albums__slide--y embla__slide">
-                          <div class="albums__slide-inner--y embla__slide__inner">
+                        <div class="albums__slide embla__slide">
+                          <div class="albums__slide-inner embla__slide__inner">
                             <img src="./images/gallery/hist.jpg" alt="image" class="albums__img albums__img--nth embla__slide__img" />
                           </div>
                         </div>
-                        <div class="albums__slide--y embla__slide">
-                          <div class="albums__slide-inner--y embla__slide__inner">
+                        <div class="albums__slide embla__slide">
+                          <div class="albums__slide-inner embla__slide__inner">
                             <img src="./images/gallery/hist.jpg" alt="image" class="albums__img albums__img--nth embla__slide__img" />
                           </div>
                         </div>
-                        <div class="albums__slide--y embla__slide">
-                          <div class="albums__slide-inner--y embla__slide__inner">
+                        <div class="albums__slide embla__slide">
+                          <div class="albums__slide-inner embla__slide__inner">
                             <img src="./images/gallery/hist.jpg" alt="image" class="albums__img albums__img--nth embla__slide__img" />
                           </div>
                         </div>
