fix: change default styles

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -17,6 +17,7 @@
 @import "pages/author";
 @import "pages/gallery";
 @import "pages/albums";
+@import "pages/kurs";
 @import "components/comments";
 @import "components/modal";
 @import "components/footer";
