--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -104,7 +104,7 @@ h4,
 h5,
 h6 {
   margin: 0;
-  margin-bottom: 1.38rem;
+  margin-bottom: 0.38rem;
   line-height: 1.3;
   letter-spacing: 1px;
   color: $title;
@@ -131,16 +131,18 @@ h2 {
 }
 
 h3 {
-  font-size: 1.953rem;
+  font-size: 1.653rem;
   @include mq("768") {
-    font-size: 1.563rem;
+    font-size: 1.363rem;
   }
 }
 
 h4 {
   font-size: 1.563rem;
+  letter-spacing: 10px;
   @include mq("768") {
     font-size: 1.25rem;
+    letter-spacing: 6px;
   }
 }
 
@@ -151,6 +153,10 @@ h5 {
 p,
 span {
   color: #111111;
+}
+
+strong {
+  text-shadow: 0 0 black;
 }
 
 // кноака наверх
