--- a/src/scss/components/switcherTheme.scss
+++ b/src/scss/components/switcherTheme.scss
@@ -3,6 +3,12 @@ body {
     color: #fff;
     background-image: $bg2-dark;
 
+    h1,h2,h3,h4,h5 {
+      p, span {
+        color: #fff!important;
+      }
+    }
+
     .wrapper {
       background-image: url(../images/stars.png);
       background-size: 100%;
