--- a/src/scss/pages/product.scss
+++ b/src/scss/pages/product.scss
@@ -201,6 +201,7 @@
 
   &__info {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     margin: 20px 0;
