--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -19,6 +19,13 @@ body {
   @extend %pt-400;
 }
 
+input {outline: none;}
+input:-webkit-autofill {
+    -webkit-box-shadow: inset 0 0 0 50px rgba(0, 0, 0, 1%) !important; /* Цвет фона */
+    -webkit-text-fill-color: #999 !important; /* цвет текста */
+    color: #999 !important; /* цвет текста */
+}
+
 .wrapper {
   position: relative;
   display: flex;
