--- a/src/scss/pages/product.scss
+++ b/src/scss/pages/product.scss
@@ -33,6 +33,10 @@
       border-collapse: collapse;
       table-layout: fixed;
 
+      & tbody td {
+        padding: 2px!important;
+      }
+
       thead th {
         font-weight: bold;
         text-align: left;
@@ -42,6 +46,7 @@
         font-size: 14px;
         border-top: 1px solid #ddd;
         @include mq("768") {
+          // padding: 2px!important;
           min-width: auto;
           font-size: 8px;
         }
@@ -53,6 +58,7 @@
       tr th,
       tr td {
         @include mq("768") {
+          // padding: 2px!important;
           min-width: auto;
           font-size: 8px;
         }
