--- a/src/templates/pages/author.html
+++ b/src/templates/pages/author.html
@@ -22,7 +22,7 @@
           <div class="container author__container">
             <h2 class="author__title title">Об авторе</h2>
 
-            <div class="author__top" data-aos="slide-up" data-aos-duration="1000">
+            <div class="author__top" >
               <img src="images/author.jpg" alt="Федоров Юрий Игоревич" class="author__img" />
 
               <div class="author__body">
@@ -40,6 +40,15 @@
                       <use xlink:href="images/sprite.svg#odnok"></use>
                     </svg>
                     <span>Профиль в Оноклассниках</span>
+                  </a>
+                </div>
+                <div class="author__social">
+                  <a href="https://proza.ru/avtor/v3let" target="_blank" class="author__social-link">
+                    <div class="social__icon social__icon--second">
+                      <!-- <use xlink:href="images/sprite.svg#proza"></use> -->
+                      П
+                    </div>
+                    <span>Профиль на Проза.ру</span>
                   </a>
                 </div>
               </div>
