feat: added screenshots and readme.md file

--- a/src/scss/components/switcherTheme.scss
+++ b/src/scss/components/switcherTheme.scss
@@ -42,6 +42,10 @@ body {
       }
     }
 
+    .menu__btn span {
+      color: #000;
+    }
+
     .search {
       &__form {
         border-radius: 8px;
