--- a/src/templates/pages/albums.html
+++ b/src/templates/pages/albums.html
@@ -64,6 +64,14 @@
                   <h3 class="albums__name">Наш выпуск</h3>
                   <a href="" class="albums__link"></a>
                 </li>
+                <li class="albums__item">
+                  <!-- <div class="albums__img-container"> -->
+                  <img src="https://picsum.photos/400/300?grayscale" alt="image" class="albums__img" />
+                  <!-- </div> -->
+
+                  <h3 class="albums__name">Наш выпуск</h3>
+                  <a href="" class="albums__link"></a>
+                </li>
 
                 <li class="albums__item">
                   <!-- <div class="albums__img-container"> -->
