--- a/src/scss/pages/albums.scss
+++ b/src/scss/pages/albums.scss
@@ -51,7 +51,7 @@
       }
 
       &:nth-child(4) {
-        grid-column: 1/3;
+        grid-column: 1/2;
         grid-row: 2/2;
         padding: 20px;
         max-width: 100%;
@@ -63,7 +63,7 @@
     }
 
     &:nth-child(1) {
-      grid-column: 1/4;
+      grid-column: 1/3;
       grid-row: 1/2;
       padding: 20px;
       min-width: 100%;
@@ -78,7 +78,17 @@
       grid-row: 2/2;
       padding: 20px;
       max-width: 100%;
-      max-height: 100%;
+      min-height: 200px;
+      // @include mq("1024") {
+      //   grid-column: 1/5;
+      // }
+    }
+    &:nth-child(6) {
+      // grid-column: 3/5;
+      // grid-row: 2/2;
+      padding: 20px;
+      max-width: 100%;
+      min-height: 200px;
       // @include mq("1024") {
       //   grid-column: 1/5;
       // }
