--- a/src/styles/pages/product.scss
+++ b/src/styles/pages/product.scss
@@ -29,7 +29,7 @@
       font-size: rem(16);
       padding: rem(8);
 
-      & > div, h5, h4, h3, h2, span, p {
+      & > div, h5, h4, h3, h2, p {
         padding: 0 rem(8)!important;
       }
     }
