--- a/src/styles/pages/gallery.scss
+++ b/src/styles/pages/gallery.scss
@@ -9,6 +9,9 @@
   border-radius: rem(12) rem(12) 0 0;
   min-height: 100vh;
   background-color: #fff;
+  @include media.max(sm){
+	padding: rem(20) rem(5);
+  }
 
   &__container {
     display: flex;
