--- a/src/styles/parts/header.scss
+++ b/src/styles/parts/header.scss
@@ -137,7 +137,8 @@
 	  @include media.max(sm) {
 		top: rem(60);
 		border-radius: 0 0 rem(10) rem(10);
-		min-width: 100%;
+		min-width: 100vw;
+		min-height: 150vh;
 	  }
 	}
 
