--- a/src/styles/parts/news.scss
+++ b/src/styles/parts/news.scss
@@ -9,8 +9,8 @@
 	border-radius: rem(12) rem(12) 0 0;
 	min-height: 100vh;
 	background-color: #fff;
-	@include media.max(md) {
-	  padding: rem(25) rem(25) rem(90);
+	@include media.max(sm) {
+	  padding: rem(20) rem(5) rem(40);
 	}
 
 	&__list {
@@ -66,6 +66,7 @@
 	  flex-direction: column;
 	  justify-content: center;
 	  align-items: center;
+	  flex: 1 1 auto;
 	  @include media.max(md){
 		overflow: hidden;
 	  }
@@ -87,7 +88,7 @@
 	  margin-bottom: rem(14);
 	  text-shadow: 1px 0 0 rgba(0, 0, 0, 0.8);
 	  max-height: rem(268);
-	  max-width: rem(694);
+	  max-width: rem(750);
 	  @include txt.row($lc: 11);
 
 	  @include media.max(md) {
