feat: chenged wp version

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,7 @@
 @use "../../node_modules/aos/src/sass/aos.scss";
 //? ### Vendors
 @use 'vendors/embla';
+@use 'vendors/wp';
 
 //? ### Core
 @use 'core/fonts';
